# hh-mcp-server

./: .gitignore  README.md  pyproject.toml
hh_mcp_server/: __main__.py  cli_main.py  constants.py  exceptions.py  server.py
hh_mcp_server/drivers/: browser.py
hh_mcp_server/scraping/: apply.py  employer.py  extractor.py  responses.py  resume.py  resume_parser.py  selectors.py  vacancy_detail.py  vacancy_search.py  vpn.py
hh_mcp_server/tools/: apply.py  employer.py  responses.py  resume.py  vacancy.py
hh_mcp_server/utils/: auth.py
tests/: test_resume_parser.py  test_vpn.py
